CREATE TABLE ARMOR_VERSION (
	id SERIAL PRIMARY KEY,
	name VARCHAR(255) NOT NULL,
	image VARCHAR(255) NOT NULL,
	fk_armor SERIAL REFERENCES ARMOR(id)
);

CREATE SEQUENCE armor_version_sequence START WITH 1 INCREMENT BY 1;