CREATE TABLE ARMOR_VERSION_ATTACK (
	id SERIAL PRIMARY KEY,
	name VARCHAR(255) NOT NULL,
	fk_armor_version SERIAL REFERENCES ARMOR_VERSION(id)
);

CREATE SEQUENCE armor_version_attack_sequence START WITH 1 INCREMENT BY 1;